<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="1" >

    <ImageView
        android:id="@+id/hr_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:padding="5dp"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/hr_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/hr_title"
                android:textColor="@drawable/hr_title_selected"
                android:textSize="@dimen/hr_title" />

            <TextView
                android:id="@+id/hr_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/hr_content"
                android:textColor="@color/hr_title_select"
                android:textSize="@dimen/hr_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/hr_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hr_price"
                    android:textColor="@color/hr_price"
                    android:textSize="@dimen/hr_content" />

                <TextView
                    android:id="@+id/hr_publish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/hr_publish"
                    android:textColor="@color/hr_publish"
                    android:textSize="@dimen/hr_publish" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>