<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/group_item_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/gropu_listview_img"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:orientation="horizontal"
                android:paddingRight="5dp" >

                <TextView
                    android:id="@+id/group_listview_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/group_listview_title"
                    android:textColor="@color/group_listview_title"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/group_listview_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="right"
                    android:singleLine="true"
                    android:text="@string/group_listview_distance"
                    android:textColor="@color/group_listview_distance"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/group_listview_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:text="@string/group_listview_content"
                android:textColor="@color/group_listview_content"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal"
                 >

                <TextView
                    android:id="@+id/group_listview_newMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_listview_newMoney"
                    android:textColor="@color/group_listview_newMoney"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingLeft="3dp"
                    android:text="@string/group_listview_newMoney_yuan"
                    android:textColor="@color/group_listview_newMoney_yuan"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/group_listview_oldMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="2238.00元"
                    android:textColor="@color/group_listview_oldMoney"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/now_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="bottom|right"
                    android:paddingLeft="3dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="已售18"
                    android:textColor="@color/group_listview_newMoney_yuan"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>