<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="5dp"  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/group_item_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/business_listview_img"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.35"
            android:contentDescription="@null"
            android:src="@drawable/ic_launcher"
            android:scaleType="fitCenter"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:id="@+id/busniess_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/busniess_title"
                    android:textColor="@color/group_listview_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tuanImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/tuan_icon"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="团"
                    android:textColor="#ff303030"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <ImageView
                    android:id="@+id/busniess_ping_img"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="?android:attr/ratingBarStyleSmall"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/start" />

                <TextView
                    android:id="@+id/busniess_ping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/busniess_pingjia"
                    android:textColor="@color/group_listview_title"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:id="@+id/busniess_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/busniess_category"
                    android:textColor="@color/group_listview_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/busniess_zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/busniess_zone"
                    android:textColor="@color/group_listview_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/busniess_juli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/busniess_juli"
                    android:textColor="@color/group_listview_title"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>