<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/tabMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF" 
        android:paddingTop="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/group_menu" >
            </ImageView>

            <TextView
                android:id="@+id/groupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group"
                android:layout_centerHorizontal="true"
                android:text="@string/group"
                android:textSize="12sp" >
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             >

            <ImageView
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/business_menu" >
            </ImageView>

            <TextView
                android:id="@+id/businessText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/business"
                android:layout_centerHorizontal="true"
                android:text="@string/business"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             >

            <ImageView
                android:id="@+id/myInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/myinfo_menu" >
            </ImageView>

            <TextView
                android:id="@+id/myInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/myInfo"
                android:layout_centerHorizontal="true"
                android:text="@string/myinfo"
                android:textSize="12sp" >
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             >

            <ImageView
                android:id="@+id/localService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/localservice_menu" >
            </ImageView>

            <TextView
                android:id="@+id/localServiceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/localService"
                android:layout_centerHorizontal="true"
                android:text="本地服务"
                android:textSize="12sp" >
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@drawable/more_menu" >
            </ImageView>

            <TextView
                android:id="@+id/moreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/more"
                android:layout_centerHorizontal="true"
                android:text="@string/more"
                android:textSize="12sp" >
            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/tabMenu"
        android:background="@drawable/line_bottom" />
    <android.support.v4.view.ViewPager
        android:id="@+id/main_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line"
        >
    </android.support.v4.view.ViewPager>

</RelativeLayout>